samples/_failures_safe/1761128507_a8bf57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d538eaec.c: In function ‘main’:
./samples/SAFE/__tmp_d538eaec.c:111:12: error: missing terminating " character
  111 |     printf("1
      |            ^~
./samples/SAFE/__tmp_d538eaec.c:111:5: error: expected expression at end of input
  111 |     printf("1
      |     ^~~~~~
./samples/SAFE/__tmp_d538eaec.c:111:5: error: expected declaration or statement at end of input
